crates/libs/lib-core/tests/ui/authorization/permit_cannot_escape_transaction.rs
use lib_core::authorization::{AuthorizedMutation, CaseResource, Existing};

fn escape<'tx>(
	permit: AuthorizedMutation<'tx, Existing<CaseResource>>,
) -> AuthorizedMutation<'static, Existing<CaseResource>> {
	permit
}

fn main() {}
